# aiaibot

./: .env.dev  .env.prod  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aiaibot/plugins/fight/: __init__.py
aiaibot/plugins/images/: __init__.py  foldername.py  models.py  models_method.py  test.py
aiaibot/plugins/russian_roulette/: __init__.py
aiaibot/plugins/silence/: __init__.py
