[project]
name = "aiaibot"
version = "0.1.0"
description = "aiaibot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["aiaibot/plugins"]
builtin_plugins = ["echo"]
